dist/objects/Group__c.object
<CustomObject>
    <fields>
        <fullName>Cohort__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The cohort to which this group belongs / is part of</inlineHelpText>
        <label>Cohort</label>
        <referenceTo>Programme__c</referenceTo>
        <relationshipLabel>Tuition Groups</relationshipLabel>
        <relationshipName>Tuition_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurriculumLevel__c</fullName>
        <label>Curriculum Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Functional Skills Level 1</fullName>
                </value>
                <value>
                    <fullName>Functional Skills Level 2</fullName>
                </value>
                <value>
                    <fullName>GCSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadTutor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Tutor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Tutor Engagement selected must also belong to this group</errorMessage>
            <filterItems>
                <field>Engagement__c.Group__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Engagement__c.Type__c</field>
                <operation>equals</operation>
                <value>Tutor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Engagement__c</referenceTo>
        <relationshipLabel>Tuition Groups</relationshipLabel>
        <relationshipName>Tuition_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OverrideTutor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Tutor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubjectFocus__c</fullName>
        <label>Subject Focus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subjects</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TutorName__c</fullName>
        <formula>LeadTutor__r.Contact__r.FirstName &amp;&quot; &quot;&amp;  LeadTutor__r.Contact__r.LastName</formula>
        <label>Tutor Name</label>
        <type>Text</type>
    </fields>
    <label>Tuition Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SubjectFocus__c</columns>
        <columns>CurriculumLevel__c</columns>
        <columns>TutorName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tuition Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Confirm_Tutor_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
ISCHANGED(  LeadTutor__c  ),
 OverrideTutor__c = FALSE,
ISBLANK(LeadTutor__c)=FALSE )</errorConditionFormula>
        <errorMessage>To change the Lead Tutor, you must first tick the &apos;override tutor&apos; checkbox</errorMessage>
    </validationRules>
</CustomObject>